<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_options"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/closeResult_tv"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_x_circle"
                    android:foreground="?attr/selectableItemBackgroundBorderless" />


                <TextView
                    android:id="@+id/options_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_settings"
                    android:transitionName="@string/transition_options"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/courseCount_tv"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0892857143"
                    android:text="@string/course_count"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/courseCount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/segoeui"
                    android:letterSpacing="0.0892857143"
                    android:textColor="#707070"
                    android:textSize="16sp"
                    tools:text="22" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/grades_value_tv"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0892857143"
                    android:text="@string/grades_value"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/grades_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/segoeui"
                    android:letterSpacing="0.0892857143"
                    android:textColor="#707070"
                    android:textSize="16sp"
                    tools:text="30600" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/pointsSum_tv"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0892857143"
                    android:text="@string/points_sum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pointsSum_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/segoeui"
                    android:letterSpacing="0.0892857143"
                    android:textColor="#707070"
                    android:textSize="16sp"
                    tools:text="1800" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/comparison_sum_tv"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0892857143"
                    android:text="@string/comparison_sum"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/comparison_sum_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/segoeui"
                    android:letterSpacing="0.0892857143"
                    android:textColor="#707070"
                    android:textSize="16sp"
                    tools:text="17.0" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_toStartOf="@+id/meriter_spinner"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0892857143"
                    android:text="@string/extras"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/meriter_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                </androidx.appcompat.widget.AppCompatSpinner>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_toStartOf="@+id/meritvarde_tv"
                    android:fontFamily="@font/segoeuib"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.0992857143"
                    android:text="@string/rating"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/meritvarde_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/segoeuib"
                    android:gravity="center_vertical|end"
                    android:letterSpacing="0.0892857143"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    tools:text="19.0" />

            </RelativeLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/share_imageView"
                    style="@style/Widget.MeritRaknare.ResultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_corner_rounded_background"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/share"
                    android:src="@drawable/ic_share" />
            </LinearLayout>-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>